added simple header and footer and changed colors

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,1 +1,8 @@
-<h1>Hello</h1>
+<header>
+  <h1 class="header-text">Cause I have to</h1>
+  <h2 class="header-text">This website is dedicated to the tracking and record keeping of police involved shootings in the Contenintal United States</h2>
+</header>
+
+<footer>
+  <span class="footer-text">Copyright (c) 2015 Copyright Holder All Rights Reserved.</span>
+</footer>
